# pyWeb

./: __main__.py  main.py  pyproject.toml
routers/: pages.py
static/css/: main.css
templates/: base_full.html  head.html  index.html
