[tool.poetry]
name = "pyWeb"
version = "0.0.1"
description = "FastAPI & HTMX template"

license = "GPL"

authors = ["Keith Bishop"]
repository = "https://github.com/kbishpnow/pyWeb"

package-mode = false

readme = ["README.md"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
pylint = "^3.1.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
